--- a/Render/Makefile
+++ b/Render/Makefile
@@ -1,22 +1,21 @@
-NAME		=		Render.a
+NAME	=	Render.a
 
-CC			=		gcc
-FINAL		=		-Wall -Werror -Wextra -O2
-DEV			=		-Wall -Werror -Wextra -g
-RM			=		rm -f
+CC		=	gcc
+CFLAGS	=	-Wall -Werror -Wextra -g
+RM		=	rm -f
 
-LIBFT		=	libft.a
-LIBFT_DIR	=	../lib/lib_ft/
+LIBFT		=	C_tools.a
+LIBFT_DIR	=	../C_tools/
 
-SRCS	=	Render.c\
+SRCS	=	Render.c
 
+OBJS	=	$(SRCS:.c=.o)
 
+$(NAME): $(OBJS) $(LIBFT_DIR)$(LIBFT)
+	@cp $(LIBFT_DIR)$(LIBFT) $(NAME)
+	@ar rcs $(NAME) $(OBJS) 
 
-all:
-	mkdir -p bin
-	$(CC) 
-	$(CC) $(FINAL) *.o -o $(SRCS)
-
+all: $(LDIR)$(LIBFT) $(NAME)
 
 clean:
 	@$(RM) $(OBJS)
