--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,9 +57,13 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
+    "*.tpp": "cpp",
     "*.ms": "shellscript",
     "cstdint": "cpp",
     "string": "cpp",
-    "wordsize.h": "c"
+    "wordsize.h": "c",
+    "raylib.h": "c",
+    "cdefine.h": "c",
+    "gmrender.h": "c"
   }
 }
