--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,13 +57,15 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
-    "*.tpp": "cpp",
     "*.ms": "shellscript",
+    "*.h": "c",
+    "*.tpp": "cpp",
     "cstdint": "cpp",
     "string": "cpp",
     "wordsize.h": "c",
     "raylib.h": "c",
     "cdefine.h": "c",
-    "gmrender.h": "c"
+    "gmrender.h": "c",
+    "algorithm": "c"
   }
 }
